--- a/assets/scss/pages/_cart-checkout.scss
+++ b/assets/scss/pages/_cart-checkout.scss
@@ -413,6 +413,10 @@
             font-size: 16px;
             color: $gray;
         }
+
+        .form-row textarea {
+            height: 5em;
+        }
     }
 
     div#cart-checkout-notice {
