--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -42,5 +42,6 @@
   'pages/shop',
   'pages/cart-checkout',
   'pages/login-register',
-  'pages/account';
+  'pages/account',
+  'pages/wishlist';
   
