--- a/assets/scss/pages/_single-products.scss
+++ b/assets/scss/pages/_single-products.scss
@@ -57,6 +57,14 @@
             .trustpilot-widget {
                 margin-bottom: 20px;
             }
+
+            .yith-wcwl-add-button {
+                margin-bottom: 20px;
+
+                .add_to_wishlist {
+                    color: $green2;
+                }
+            }
         }
 
         .woocommerce-variation-price {
