--- a/assets/scss/pages/_shop.scss
+++ b/assets/scss/pages/_shop.scss
@@ -1,12 +1,14 @@
 .woocommerce {
-    main {
-        padding-top: 50px;
-        padding-bottom: 70px;
-
-        & > .container {
+    &-shop,
+    &.tax-product_cat {
+        main > .container {
             display: flex;
             gap: 50px;
         }
+    }
+    main {
+        padding-top: 50px;
+        padding-bottom: 70px;
 
         .vk-shop-wrapper {
             flex: 1;
@@ -170,6 +172,7 @@
                     border: 0;
                     border-radius: 50%;
                     opacity: 0;
+                    visibility: hidden;
                     transition: .2s ease-in-out;
 
                     &:before {
@@ -177,6 +180,57 @@
                         position: absolute;
                         right: calc(100% + 10px);
                         width: 80px;
+                        font-size: 13px;
+                        color: $dark;
+                        background-color: $white;
+                        border-radius: 3px;
+                        opacity: 0;
+                        transform: translateX(-10px);
+                        transition: .2s ease-in-out;
+                        visibility: hidden;
+                    }
+
+                    &:hover {
+                        background: rgba(255, 143, 0, 0.9);
+
+                        &:before {
+                            opacity: 1;
+                            transform: translateX(0);
+                            visibility: visible;
+                        }
+                    }
+                }
+
+                .add_to_wishlist {
+                    position: absolute;
+                    top: 65px;
+                    right: 10px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 46px;
+                    height: 46px;
+                    color: $white;
+                    background: rgba(0, 128, 119, .9);
+                    border: 0;
+                    border-radius: 50%;
+                    opacity: 0;
+                    visibility: hidden;
+                    transition: .2s ease-in-out;
+
+                    i {
+                        margin: auto;
+                    }
+
+                    span {
+                        display: none;
+                    }
+
+                    &:before {
+                        content: 'Add to wishlist';
+                        position: absolute;
+                        right: calc(100% + 10px);
+                        width: 100px;
                         font-size: 13px;
                         color: $dark;
                         background-color: $white;
@@ -266,8 +320,10 @@
                 }
 
                 &:hover {
-                    .woosq-btn {
+                    .woosq-btn,
+                    .add_to_wishlist {
                         opacity: 1;
+                        visibility: visible;
                     }
                 }
             }
