--- a/assets/scss/pages/_account.scss
+++ b/assets/scss/pages/_account.scss
@@ -168,6 +168,28 @@
                     font-size: 14px;
                 }
             }
+
+            table.woocommerce-orders-table {
+                margin: 0;
+                border-radius: 0;
+                border: 0;
+                border-collapse: collapse;
+
+                td {
+                    border: 0;
+                }
+
+                tbody tr:nth-of-type(odd) {
+                    background: rgba(152, 222, 190, .2);
+                }
+
+                .button {
+                    font-family: 'Signika', sans-serif;
+                    font-weight: 500;
+                    color: $white;
+                    background: $orange3;
+                }
+            }
         }
     }
 }
