--- a/assets/scss/pages/_shop.scss
+++ b/assets/scss/pages/_shop.scss
@@ -547,6 +547,10 @@
                     width: 25%;
                 }
             }
+
+            .vk-filter-toggle {
+                display: none;
+            }
         }
     }
 
@@ -556,12 +560,67 @@
                 position: fixed;
                 top: 0;
                 left: 0;
-                z-index: 9999;
+                z-index: 9999999;
+                padding: 0 20px 50px;
                 width: 285px;
                 height: 100%;
                 background: $white;
                 transform: translateX(-100%);
                 transition: .3s ease-in-out;
+
+                &.open {
+                    transform: translateX(0);
+                }
+
+                & > .widget {
+                    margin-bottom: 30px;
+                }
+
+                .heading-bar {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 10px 20px;
+                    margin: 0 -20px 20px;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    border-bottom: 1px solid $lgray3;
+            
+                    .close:before {
+                        content: "\e9b3";
+                        padding-right: 6px;
+                        font-family: 'wokiee_icons';
+                        font-size: 14px;
+                    }
+                }
+            }
+
+            .vk-shop-nav-actions {
+                justify-content: space-between;
+
+                .woocommerce-result-count,
+                .woocommerce-ordering {
+                    display: none;
+                }
+            }
+
+            .vk-filter-toggle {
+                display: block;
+                margin-bottom: 1rem;
+                font-family: 'Signika', sans-serif;
+                font-size: 13px;
+                color: $green2;
+                text-transform: uppercase;
+
+                &:before {
+                    content: '\e9b9';
+                    position: relative;
+                    top: 4px;
+                    margin-right: 7px;
+                    font-weight: normal;
+                    font-family: 'wokiee_icons';
+                    font-size: 20px;
+                }
             }
         }
 
