--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -80,6 +80,10 @@
 
             &:hover {
                 color: $dark;
+
+                svg path {
+                    fill: $dark;
+                }
             }
         }
     }
