--- a/assets/scss/pages/_cart-checkout.scss
+++ b/assets/scss/pages/_cart-checkout.scss
@@ -352,6 +352,13 @@
 
             .wc-stripe_cc-new-method-container {
                 margin-bottom: 0;
+
+                @include respond-to(md) {
+                    .col-md-4 {
+                        flex: 0 0 50%;
+                        max-width: 50%;
+                    }
+                }
             }
 
             .wc-stripe-bootstrap-form .row:last-of-type > *:last-of-type {
